--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -104,23 +104,23 @@
             <dxi-column dataField="referencia" caption="REFERENCIA" [width]="100"></dxi-column> 
             <dxi-column dataField="observaciones" caption="OBSERVACIONES" [width]="200"></dxi-column> 
             <dxi-column dataField="recogeR_EN" caption="RECOGER EN" [width]="100"></dxi-column> 
-            <dxi-column dataField="totaL_SALDO" caption="TOTAL SALDO" [width]="120"></dxi-column> 
-            <dxi-column dataField="totaL_VENCIDOS" caption="TOTAL VENCIDOS" [width]="130"></dxi-column> 
-            <dxi-column dataField="v1A15" caption="1-15" [width]="100"></dxi-column> 
-            <dxi-column dataField="v16A30" caption="16-30" [width]="100"></dxi-column> 
-            <dxi-column dataField="v31A45" caption="31-45" [width]="100"></dxi-column> 
-            <dxi-column dataField="v46A60" caption="46-60" [width]="100"></dxi-column> 
-            <dxi-column dataField="v61A90" caption="61-90" [width]="100"></dxi-column> 
-            <dxi-column dataField="v91A120" caption="91-120" [width]="100"></dxi-column> 
-            <dxi-column dataField="v120" caption="> 120" [width]="100"></dxi-column> 
-            <dxi-column dataField="poR_VENCER" caption="POR VENCER" [width]="120"></dxi-column> 
-            <dxi-column dataField="poR_VENCER2" caption="POR VENCER 2" [width]="120"></dxi-column>
-            <dxi-column dataField="p1A7" caption="1-7" [width]="100"></dxi-column> 
-            <dxi-column dataField="p8A15" caption="8-15" [width]="100"></dxi-column> 
-            <dxi-column dataField="p16A30" caption="16-30" [width]="100"></dxi-column> 
-            <dxi-column dataField="p31" caption="> 31" [width]="100"></dxi-column> 
-            <dxi-column dataField="saldO_SIN_CCOBRO" caption="SALDO SIN COBRO" [width]="160"></dxi-column>
-            <dxi-column dataField="totaL_INTEGRADO" caption="TOTAL INTEGRADO" [width]="160"></dxi-column>
+            <dxi-column dataField="totaL_SALDO" caption="TOTAL SALDO" [width]="120" [format]="separator"></dxi-column> 
+            <dxi-column dataField="totaL_VENCIDOS" caption="TOTAL VENCIDOS" [width]="130" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v1A15" caption="1-15" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v16A30" caption="16-30" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v31A45" caption="31-45" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v46A60" caption="46-60" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v61A90" caption="61-90" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v91A120" caption="91-120" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="v120" caption="> 120" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="poR_VENCER" caption="POR VENCER" [width]="120" [format]="separator"></dxi-column> 
+            <dxi-column dataField="poR_VENCER2" caption="POR VENCER 2" [width]="120" [format]="separator"></dxi-column>
+            <dxi-column dataField="p1A7" caption="1-7" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="p8A15" caption="8-15" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="p16A30" caption="16-30" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="p31" caption="> 31" [width]="100" [format]="separator"></dxi-column> 
+            <dxi-column dataField="saldO_SIN_CCOBRO" caption="SALDO SIN COBRO" [width]="160" [format]="separator"></dxi-column>
+            <dxi-column dataField="totaL_INTEGRADO" caption="TOTAL INTEGRADO" [width]="160" [format]="separator"></dxi-column>
             <dxi-column dataField="diaS_DE_CREDITO" caption="DÍAS DE CRÉDITO" [width]="150"></dxi-column>
             <dxi-column dataField="diaS_SIN_CARTA_C" caption="DÍAS SIN CARTA" [width]="150"></dxi-column>
 
