--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -2,7 +2,7 @@
 <div class="content-block dx-card responsive-paddings padding-10">
 
     <dx-tab-panel>
-        <!-- <dxi-item title="Cartera cliente">
+        <dxi-item title="Cartera cliente">
             <br><br>
             <dx-responsive-box>
                 <dxi-col [ratio]=".30"></dxi-col>
@@ -67,7 +67,7 @@
                 <dxi-column dataField="total" caption="Total" [format]="formatSliderTooltip" cssClass="styletotal"></dxi-column>
 
             </dx-data-grid>
-        </dxi-item> -->
+        </dxi-item>
 
         <dxi-item title="Detalle">
             <br>
